--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
