--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<jetty.version>9.1.3.v20140225</jetty.version>
 		<commonsLang.version>3.1</commonsLang.version>
 		<logback.version>1.1.1</logback.version>
-		<servlet.version>2.0</servlet.version>
+		<servlet.version>2.5</servlet.version>
 		<jfinal.version>1.6</jfinal.version>
 		<freemarker.version>2.3.20</freemarker.version>
 		<junit.version>4.11</junit.version>
@@ -58,7 +58,7 @@
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>jsp-api</artifactId>
+			<artifactId>servlet-api</artifactId>
 			<version>${servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
@@ -96,6 +96,7 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
 				<configuration>
+					<war>${basedir}/target/jettyRunnerSample.war</war>
 					<webAppConfig>
 						<contextPath>/${project.artifactId}</contextPath>
 					</webAppConfig>
