--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>jettyRunnerSample</finalName>
+		<finalName>root</finalName>
 		<plugins>
 
 			<!-- jetty插件, 设定context path与spring profile -->
@@ -110,6 +110,28 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
+					<warName>root</warName>
+					<outputDirectory>${basedir}</outputDirectory>
+					<webResources>
+						<resource>
+							<directory>${basedir}/lib</directory>
+							<targetPath>WEB-INF/lib</targetPath>
+							<filtering>true</filtering>
+							<includes>
+								<include>**/*.jar</include>
+							</includes>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 
