--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,12 @@
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>me.bird.heroku.webconfig.DefaultConfig</param-value>
+			<param-value>me.bird.webconfig.DefaultConfig</param-value>
 		</init-param>
 	</filter>
 
 	<listener>
-		<listener-class>me.bird.heroku.webconfig.ContextListener</listener-class>
+		<listener-class>me.bird.webconfig.ContextListener</listener-class>
 	</listener>
 	
 	<filter-mapping>
